Make web3j encoding/decoding static, implement more sensible log catching, implement object orientated Web3Client#abiDecode